# wol-rest-rs

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: cli.rs  config.rs  main.rs  server.rs  wol.rs
